# AnalysisTreeTaskSkeleton

./: CMakeLists.txt  README.md
at_task/: ATI2.cpp  ATI2.hpp  ATI2_ATHelper.hpp  CMakeLists.txt  StaticTaskRegistry.h  Task.h  TaskRegistry.cpp  TaskRegistry.h  UserTask.cpp  UserTask.h  task_main.cpp
ati2/: ATI2.cpp  ATI2.hpp  ATI2_ATHelper.hpp  CMakeLists.txt
cmake/: AnalysisTree.cmake  AnalysisTreeCuts.cmake
sample_task/: CMakeLists.txt  SampleTask.cpp  SampleTask.h  StaticTaskRegistryTest.cpp
task_main/: CMakeLists.txt  Task.h  TaskRegistry.h  UserTask.h  task_main.cpp
