cmake_minimum_required(VERSION 3.12)
project(ATTaskSkeleton)

set(CMAKE_CXX_STANDARD 17)

set(ATTaskSkeleton_BUILD_SAMPLE OFF CACHE BOOL "Build sample task")


list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

if (NOT AnalysisTree_FOUND)
    include(AnalysisTree)
endif()


add_subdirectory(at_task)

if (ATTaskSkeleton_BUILD_SAMPLE)
    add_subdirectory(sample_task)
endif()
